--- a/hello_spring/src/main/resources/application.properties
+++ b/hello_spring/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+# reload Gradle 해야 빨간 글씨 사라짐
+spring.datasource.driver-class-name=org.h2.Driver
