Connect DB to the Spring : JPA
* JPA 설정: sql 작성없이 DB 접근이 가능하도록 수정
* JPA 엔티티 맵핑: Annotation을 이용해 회원 엔티티와 회원 DB 맵핑
* Spring Config 파일 수정:  JPA 회원 리포지토리를 사용하도록 수정 (COP)

--- a/hello_spring/src/main/resources/application.properties
+++ b/hello_spring/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 # reload Gradle 해야 빨간 글씨 사라짐
 spring.datasource.driver-class-name=org.h2.Driver
+# JPA가 날리는 sql을 볼 수 있다.
+spring.jpa.show-sql=true
+
+#spring.jpa.hibernate.ddl-auto=create # create table 자동으로 해준다.
+# 이미 members 테이블을 만들고 시작하기 때문에, 자동으로 테이블 생성해주는 기능은 끄겠다.
+spring.jpa.hibernate.ddl-auto=none
