--- a/myFirstProject/build.gradle
+++ b/myFirstProject/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management' // 스프링 부트 의존성 관리해주는 plugin
+apply plugin: 'io.spring.dependency-management' // 스프링 부트 의존성 관리해주는 plugins
 
 group 'com.jayy.book'
 version '1.0-SNAPSHOT'
@@ -28,7 +28,15 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+    compile('org.springframework.session:spring-session-jdbc')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
 
 
